# misaki-utils

./: .gitignore  .gitmodules  CMakeLists.txt
include/fuka/math/: vector.h
include/misaki/utils/: container.hpp  cuda.hpp  eigen_math.h  image.h  math.h  math.hpp  memory.hpp  misc.h  stl.hpp  system.h  texture.h  util.h
include/misaki/utils/container/: inlinedvector.hpp  template.hpp
include/misaki/utils/cuda/: array.hpp  common.cuh
include/misaki/utils/eigen_math/: bbox.h  color.h  distribution.h  frame.h  scalar.h  tensor.h
include/misaki/utils/image/: image.hpp  imageio.h  load_image.h
include/misaki/utils/math/: array.hpp  bbox.h  bbox2.hpp  bbox3.hpp  bsphere.h  color.h  color.hpp  color3.hpp  color4.hpp  common.hpp  distribution.h  frame.h  frame.hpp  matrix.hpp  matrix3.hpp  matrix4.hpp  random.h  random.hpp  scalar.h  tensor.h  transform.h  transform3.hpp  transform4.hpp  tuple2.hpp  tuple3.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector.h
include/misaki/utils/memory/: taggedptr.hpp
include/misaki/utils/misc/: string.h
include/misaki/utils/stl/: array.hpp  memory_resource.hpp  optional.hpp  span.hpp
include/misaki/utils/system/: fresolver.h  logger.h  platform.h  shared_library.h
include/misaki/utils/texture/: sample2d.h
include/misaki/utils/util/: check.h  logger.h  pbar.h  string.h  timer.h
src/cuda/: jit.cu
src/image/: image.cpp  imageio.cpp  stb_image.h  stb_image_write.h
src/math/: vector.cpp
src/misc/: string.cpp
src/stl/: memory_resource.cpp
src/system/: fresolver.cpp  logger.cpp  shared_library.cpp
src/util/: logger.cpp  string.cpp
tests/: test_cuda.cpp  test_eigen_math.cpp  test_image.cpp  test_math.cpp
